# Storyloom

./: .env.example  .gitignore  CLAUDE.md  MANIFEST.in  NEXT_STEPS.md  README.md  README.zh-CN.md  config.example.json  pyproject.toml  setup.py
docs/: Phase1-exec-flow-sample.md  Phase1-exec-flow.md  README.md  Storyloom-phased.md  Storyloom.md  cli.md  course-project-proposal.md  design.md  engineering-journal.md  report.md  test-prompt-medium.md
docs/api/: co-create.md  session.md
docs/spec/: block-spec.md  data-model.md  exec-flow.md  prompt-design.md  walkthrough.md
scripts/: build.sh  compile_mo.py
src/storyloom/: __init__.py  api_client.py  cli_utils.py  co_create.py  config.py  context_manager.py  display.py  game_loop.py  i18n.py  i18n_compile.py  main.py  prompt_builder.py  streaming_parser.py  user_config.py  xml_parser.py
tests/: analyze_frame.py  analyze_results.py  analyze_seg_test.py  generate_prompt.py  run_full_test.py  run_multi_round_test.py  run_prompt_test.py  run_round1_test.py  run_round2_test.py  run_round3_test.py  run_round4_test.py  run_round5_test.py  test_api_client.py  test_co_create.py  test_context_manager.py  test_dev_cli.py  test_display.py  test_game_loop.py  test_i18n.py  test_integration.py  test_main.py  test_prompt_builder.py  test_save_manager.py  test_session.py  test_streaming_parser.py  test_user_config.py  test_web_server.py  test_xml_parser.py
tests/data/: test_story.json
tests/prompt_lab/: analyze_frame.py  analyze_seg_test.py  generate_prompt.py  run_full_test.py  run_multi_round_test.py  run_prompt_test.py  (+5 more)
(+178 files in other folders)
