[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "storyloom"
version = "0.1.0"
description = "AI-powered interactive text fiction game engine"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
storyloom = "storyloom.main:main"
