[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "storyloom"
version = "1.0.2"
description = "AI-powered interactive text fiction game engine"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
storyloom-web = "storyloom.web.server:main"

[tool.setuptools.package-data]
storyloom = ["web/static/**/*", "core/lang_meta/*.json"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--ignore=tests/prompt_lab"
